Fri Jul 11 00:18:19 1997  Jim Blandy  <jimb@floss.red-bean.com>

	Changes to compile under gnu-win32, from Marcus Daniels:
	* configure.in: When sys/un.h exists, define HAVE_UNIX_DOMAIN_SOCKETS
	to indicate that Unix domain sockets will work.
	Check for socketpair, getgroups, setwent, pause, and tzset
	(cygwin currently lacks these them).
	Check for sethostent endhostent getnetent setnetent endnetent
	getprotoent endprotoent getservent endservent getnetbyaddr
	getnetbyname inet_lnaof inet_makeaddr inet_netof (cygwin currently
	lacks them).  In the case of cygwin, temporarily prefix these
	functions with "cygwin32_", the way that netdb.h does.
	Don't define HAVE_REGCOMP unless both regcomp and regex.h are
	available (cygwin b18 came distributed without a working regex.h
	file).
	* acconfig.h (HAVE_UNIX_DOMAIN_SOCKETS): Add this.
	* configure: Regenerated.

Wed Jul  2 12:28:40 1997  Tim Pierce  <twp@twp.tezcat.com>

	* ltmain.sh: Remove any trailing colon on $shlibpath_var
	(i.e. LD_LIBRARY_PATH) for braindamaged linkers that choke on it.
	Patch sent to bug-libtool.

Sat Jun 28 16:13:43 1997  Tim Pierce  <twp@twp.tezcat.com>

	* configure.in: Add alloca.o explicitly to LIBOBJS (thanks Eric
	Backus for reporting this problem and suggesting a fix).
	* configure: Regenerated.

Thu Jun 26 20:43:31 1997  Jim Blandy  <jimb@floss.red-bean.com>

	* Guile 1.2 released.
	
	* configure.in: Check for librx after libm; fundamentals need to
	come first.
	* configure: Regenerated.

Tue Jun 24 13:34:20 1997  Tim Pierce  <twpierce@bio-5.bsd.uchicago.edu>

	* aclocal.m4 (AM_PATH_PROG_LD): Change `ac_cv_path_LD' typo to
	`am_cv_path_LD'.
	* configure: Regenerated.

Sun Jun 22 15:43:07 1997  Jim Blandy  <jimb@floss.red-bean.com>

	Try to detect when people are using one version of libguile and a
	different version of ice-9.  People have been skewing things and
	sending in bug reports.
	* configure.in: Provide libguile its version information through a